tiny css changes

--- a/options.css
+++ b/options.css
@@ -29,7 +29,8 @@ input {
   text-align: right; }
 
 .add-button, .delete-button {
-  cursor: pointer; }
+  cursor: pointer;
+  margin-top: 0.25em; }
 
 .delete-button:hover {
   color: #f00; }
