--- a/options.css
+++ b/options.css
@@ -1,19 +1,47 @@
 body {
   width: 400px;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  padding: 2em 3em; }
+  padding: 2em 3em;
+  font-size: 1em; }
 
-input {
+input, textarea, .button {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1em;
   outline: none;
   border-radius: 4px;
   padding: 0.3em 0.6em;
   border: none; }
-  input.from {
+  input.from, textarea.from, .button.from {
     background-color: #fdf3e8; }
-  input.to {
+  input.to, textarea.to, .button.to {
     background-color: #ecf5e0; }
+
+textarea {
+  background-color: #f9f9f9;
+  width: 100%;
+  height: 100px; }
+
+.button {
+  text-decoration: none;
+  text-shadow: none;
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0.5em 20px;
+  margin: 0.5em 0;
+  transition: 0.2s;
+  border-radius: 4px;
+  outline: none;
+  border-style: none;
+  background-color: #f9f9f9; }
+  .button:not([disabled]) {
+    cursor: pointer; }
+  .button:hover {
+    background-color: #dff5c2; }
+  .button[disabled] {
+    background-color: #f9f9f9; }
+
+.section:not(:first-child) {
+  margin-top: 4em; }
 
 .rule {
   margin: 0.5em;
@@ -33,6 +61,7 @@ input {
   margin-top: 0.25em; }
 
 .delete-button:hover {
-  color: #f00; }
+  color: #f00;
+  transition: 0.2s; }
 
 /*# sourceMappingURL=options.css.map */
