--- a/options.sass
+++ b/options.sass
@@ -1,15 +1,18 @@
 @import mixins
 
+$grey: #999
 $grey-area: #f9f9f9
 $chartreuse: #e0ff94
 $green-area: #ecf5e0
 $green-area-emph: #dff5c2
 $orange-area: #fdf3e8
 
+$code-width: 300px
+
 // Generics
 
 body
-  width: 400px
+  width: 550px
   font-family: 'Helvetica Neue', Helvetica, sans-serif
   padding: 2em 3em
   font-size: 1em
@@ -19,20 +22,24 @@ input, textarea, .button
   font-size: 1em
   outline: none
   border-radius: 4px
-  padding: 0.3em 0.6em
+  padding: 0.3em 0.5em
   border: none
 
-  &.from
+  &#from-text
     background-color: $orange-area
-  &.to
+  &#to-text
     background-color: $green-area
+    width: $code-width
+
+input
+  width: 100%
 
 textarea
   background-color: $grey-area
   width: 100%
   height: 100px
 
-.button
+button, .button
   +button
   background-color: $grey-area
   &:hover
@@ -40,26 +47,85 @@ textarea
   &[disabled]
     background-color: $grey-area
 
+.hidden
+  display: none !important
+
+.no-bottom-margin
+  margin-bottom: 0
+
+.float-right
+  float: right
+.float-left
+  float: left
+
+.grey
+  color: $grey
+
+.note
+  font-size: 12px
+  padding: 0.3em 0 0.6em
+  color: $grey
+
 // Layout
 
-.section:not(:first-child)
-  margin-top: 4em
+.section
+  position: relative
+
+  &:not(:first-child)
+    margin-top: 4em
 
 .rule
   margin: 0.5em
   vertical-align: top
+
+#rules
+  width: 100%
+
   .fa-long-arrow-right
     margin-top: 0.3em
 
+  td
+    position: relative
+  td:last-child
+    text-align: right
+
+
+#add-rule
+  vertical-align: top
+  td:nth-child(3)
+    padding: 0 0.5em
+  td:nth-child(1)
+    padding-right: 0.5em
+
 .from, .to
   display: inline
-  padding: 0.3em 0.6em
-.from
+  padding: 0.3em 0.5em
+.from, #from-text
   text-align: right
 
-.add-button, .delete-button
+.add-button, .delete-button, #code-toggle-button
   cursor: pointer
   margin-top: 0.25em
-.delete-button:hover
-  color: #f00
   transition: 0.2s
+
+.add-button:hover
+  color: #85c1a4
+
+.delete-button:hover
+  color: #dc1a02
+
+#code-toggle-button
+  overflow: hidden
+  margin-right: 1em
+
+.CodeMirror
+  height: auto
+  viewportMargin: Infinity
+  width: $code-width
+  margin-right: 0.3em
+  border-radius: 4px
+  background: #f9f9f9
+
+#add-rule .CodeMirror
+  background: #fff
+  border: 1px dashed #ccc
