--- a/options.sass
+++ b/options.sass
@@ -7,12 +7,12 @@ $green-area: #ecf5e0
 $green-area-emph: #dff5c2
 $orange-area: #fdf3e8
 
-$code-width: 300px
+$code-width: 350px
 
 // Generics
 
 body
-  width: 550px
+  width: 600px
   font-family: 'Helvetica Neue', Helvetica, sans-serif
   padding: 2em 3em
   font-size: 1em
@@ -98,7 +98,7 @@ button, .button
     padding-right: 0.5em
 
 .from, .to
-  display: inline
+  display: table-cell
   padding: 0.3em 0.5em
 .from, #from-text
   text-align: right
